# Digital-Twin

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
notebooks/: 01_read_grd.ipynb  02_generate_yearly_csv.ipynb  03_combine_years.ipynb  04_regrid_temperature.ipynb  05_generate_stacked_tensor.ipynb  06_verification.ipynb
src/climate_preprocessing/: __init__.py  __main__.py  csv_export.py  dates.py  grd.py  logging_utils.py  mask.py  metadata.py  pipeline.py  regrid.py  tensor.py  verify.py
